--- a/index.html
+++ b/index.html
@@ -5,116 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/main.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-    <title>작업중 EDIYA COFFEE 수정</title>
+    <title>작업중 EDIYA COFFEE</title>
     <!-- https://www.ediya.com -->
     <style>
-        body {
-            width: 100%;
-        }
-
-        * {
-            font-family: 'Roboto', sans-serif;
-        }
-
-        a {
-            text-decoration: none;
-            color: black;
-        }
-
-        .screen_out {
-            overflow: hidden;
-            text-indent: -9999px;
-        }
-
-        #wrap {}
-
-        /* HEADER */
-        #header {
-            margin: 0 auto;
-            width: 1180px;
-        }
-
-        #header .topmenu {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            height: 43px;
-        }
-
-        #header .topmenu .top_left {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            width: 180px;
-            font-size: 0.8em;
-        }
-
-        #header .topmenu .top_right {
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-        }
-
-        #header .topmenu .top_right li {
-            margin-right: 20px;
-            font-size: 13px;
-        }
-
-        #header .topmenu .top_right li a {
-            color: #848484;
-        }
-
-        #header .topmenu li img {
-            margin-right: -10px;
-        }
-
-        #header .topmenu li select {
-            width: 150px;
-            height: 25px;
-            padding: 0 10px;
-            color: #848484;
-        }
-
-        #header .nav {
-            display: flex;
-            margin-top: 30px;
-        }
-
-        #header .nav .logo {
-            background-image: url('../img/top_logo.gif');
-        }
-
-        #header .nav .logo {
-            display: inline;
-        }
-
-        #header .nav .gnb {
-            display: flex;
-            justify-content: center;
-            width: 978px;
-        }
-
-        #header .nav .gnb .menu_title a {
-            display: block;
-            margin-right: 40px;
-            width: 120px;
-            color: #848484;
-        }
-
-        #header .nav .gnb .menu_title a span {
-            margin-bottom: 20px;
-            display: block;
-            font-weight: 700;
-        }
-
-        #header .nav .gnb .menu_title li {
-            padding: 5px 0;
-            font-size: 12px;
-        }
-
         /* container 공통 사항 */
         #container .bold {
             font-weight: 900;
@@ -128,10 +25,16 @@
         }
 
         /* MAIN BANNER */
-        #container .banner {
-            margin-top: 30px;
-            background-image: url("img/main_banner_1.jpg");
+        #container .banner{
+            /* position: relative; */
+        }
+
+        #container .banner img {
+            /* position: absolute;
             height: 621px;
+            top:0;
+            left:0; */
+            background-color:tomato;
         }
 
         /* DREAM FACTORY BANNER */
@@ -615,63 +518,6 @@
             width: 233px;
             padding: 1px;
         }
-
-        /* FOOTER */
-        #footer {
-            background-color: #262626;
-            width: 100%;
-            height: 250px;
-            margin-top: 100px;
-        }
-
-        #footer .sitemap {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            /* background: tomato; */
-            height: 60px;
-            border-bottom: 1px solid #818181;
-        }
-
-        #footer .sitemap li {
-            margin-right: 30px;
-            font-size: 0.9em;
-            font-weight: 700;
-        }
-
-        #footer .sitemap li a {
-            color: #818181;
-        }
-
-        #footer .footer_logo img {
-            margin: 30px auto;
-            /* background:tomato; */
-            display: block;
-        }
-
-        #footer .footer_info {
-            width: 790px;
-            margin: 0 auto;
-            color: #818181;
-            font-size: 0.7em;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 40px;
-            flex-wrap: wrap;
-        }
-
-        #footer .footer_info li::after {
-            content: "|";
-            margin: 20px;
-        }
-
-        #footer p {
-            font-size: 0.7em;
-            margin-top: 20px;
-            color: #818181;
-            text-align: center;
-        }
     </style>
     <script></script>
 </head>
@@ -704,14 +550,14 @@
             </ul>
             <div class="nav">
                 <h1 class="screen_out">메인 로고</h1>
-                <div class="logo"><img src="img/top_logo.gif" alt="logo"></div>
+                <div class="logo"><a href="index.html"> <img src="img/top_logo.gif" alt="logo"></a></div>
                 <!-- GNB MENU -->
                 <ul class="gnb">
                     <h2 class="screen_out">이디야 메인 메뉴</h2>
                     <li class="menu_title"><a href="#"><span>메뉴</span></a>
                         <ul>
                             <li><a href="">음료</a></li>
-                            <li><a href="#">베이커리</a></li>
+                            <li><a href="bakery.html">베이커리</a></li>
                             <li><a href="#">이디야 스낵</a></li>
                             <li><a href="#">MD</a></li>
                             <li><a href="#">비니스트</a></li>
@@ -741,7 +587,7 @@
                     </li>
                     <li class="menu_title"><a href="#"><span>이디야 소식</span></a>
                         <ul>
-                            <li><a href="#">공지사항</a></li>
+                            <li><a href="notice.html">공지사항</a></li>
                             <li><a href="#">이벤트</a></li>
                         </ul>
                     </li>
@@ -749,9 +595,11 @@
             </div>
         </header>
 
+        <!--  C O N T E N T  -->
+
         <content id="container">
             <!-- MAIN BANNER -->
-            <div class="banner"></div>
+            <div class="banner"><img src="img/main_banner_1.jpg" alt="mainbanner"></div>
             <!-- DREAM FACTORY BANNER -->
             <div class="dream_factory">
                 <div class="dream_factory_text">
