--- a/index.html
+++ b/index.html
@@ -548,9 +548,9 @@
         }
 
         #container .culture_lab_icon a p {
-            font-size:1.2rem;
-            margin-top:20px;
-            color:#fff;
+            font-size: 1.2rem;
+            margin-top: 20px;
+            color: #fff;
         }
 
         /* COFFEE LAB BANNER */
@@ -789,41 +789,41 @@
                 <ul class="gnb">
                     <h2 class="screen_out">이디야 메인 메뉴</h2>
                     <li class="menu_title"><a href="#"><span>메뉴</span></a>
-                        <ul>
+                        <!-- <ul>
                             <li><a href="#">음료</a></li>
                             <li><a href="bakery.html">베이커리</a></li>
                             <li><a href="#">이디야 스낵</a></li>
                             <li><a href="#">MD</a></li>
                             <li><a href="#">비니스트</a></li>
                             <li><a href="bean.html">원두</a></li>
-                        </ul>
+                        </ul> -->
                     </li>
                     <li class="menu_title"><a href="#"><span>이디야멤버스</span></a>
-                        <ul>
+                        <!-- <ul>
                             <li><a href="#">멤버스 소개</a></li>
                             <li><a href="#">이디야카드</a></li>
                             <li><a href="#">선물하기</a></li>
                             <li><a href="#">이디야오더</a></li>
                             <li><a href="#">FAQ</a></li>
-                        </ul>
+                        </ul> -->
                     </li>
                     <li class="menu_title"><a href="#"><span>이디야커피랩</span></a>
-                        <ul>
+                        <!-- <ul>
                             <li><a href="#">이디야커피랩</a></li>
                             <li><a href="#">이디야커피랩 메뉴</a></li>
-                        </ul>
+                        </ul> -->
                     </li>
                     <li class="menu_title"><a href="#"><span>이디야컬쳐랩</span></a>
-                        <ul>
+                        <!-- <ul>
                             <li><a href="musicfesta.html">뮤직페스타</a></li>
                             <li><a href="#">프로그램 및 시설 안내</a></li>
-                        </ul>
+                        </ul> -->
                     </li>
                     <li class="menu_title"><a href="#"><span>이디야 소식</span></a>
-                        <ul>
+                        <!-- <ul>
                             <li><a href="#">공지사항</a></li>
                             <li><a href="#">이벤트</a></li>
-                        </ul>
+                        </ul> -->
                     </li>
                 </ul>
             </div>
@@ -980,7 +980,7 @@
                 </ul>
             </div>
         </content>
-        
+
         <!-- FOOTER -->
         <footer id="footer">
             <ul class="sitemap">
@@ -1007,5 +1007,22 @@
     </div>
 
 </body>
+<script>
+
+    // 스크롤 이벤트 관련
+    window.addEventListener('scroll', scrollWork);
+
+    const nav = document.querySelector('#header .nav');
+    const html = document.querySelector('html');
+
+    function scrollWork() {
+
+        if(html.scrollTop > 130){
+            nav.classList.add('fix');
+        }else{
+            nav.classList.remove('fix');
+        }
+    }
+</script>
 
 </html>
